<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EducationalDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayoutEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/pageHeader"
            android:text="@string/Educational_Details" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etSchoolField"
            style="@style/etDropDownField"
            android:hint="@string/Schooling"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_baseline_menu_book_24">

            <AutoCompleteTextView
                android:id="@+id/ac_txtSchool"
                style="@style/editText"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtP_tage"
                style="@style/txtStyle"
                android:text="@string/percentage" />

            <TextView
                android:id="@+id/txtPercentageValue"
                style="@style/txtStyle" />


        </LinearLayout>


        <com.google.android.material.slider.Slider
            android:id="@+id/percentageSlider"
            style="@style/editText"
            android:stepSize="0.5"
            android:valueFrom="0"
            android:valueTo="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etGraduationField"
            style="@style/etDropDownField"
            android:hint="@string/Graduation"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_baseline_school_24">

            <AutoCompleteTextView
                android:id="@+id/ac_txtGraduation"
                style="@style/editText"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCgpa"

                style="@style/txtStyle"
                android:text="@string/CGPA" />

            <TextView
                android:id="@+id/txtCgpaValue"
                style="@style/txtStyle" />
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/cgpaSlider"
            style="@style/editText"
            android:stepSize="0.1"
            android:valueFrom="0"
            android:valueTo="10" />

            <Button
                android:id="@+id/btnSave"
                style="@style/btnStyle"
                android:layout_gravity="center"
                android:text="@string/Sign_Up" />

    </LinearLayout>


</ScrollView>